# YK-Game-Engine

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  enchiridion  ignore.txt  readme.md  setup.py  todo.txt
cmake/: toolchains.cmake
docs/: main.md  main.txt
include/: App.h  App.hpp  FileReader.h  FileReader.hpp  Renderer.h  Renderer.hpp  Shader.hpp  Window.h  Window.hpp
include/yk/: yk_app.h  yk_app_h.h  yk_camera.h  yk_camera2d.h  yk_core_types.h  yk_defines.h  yk_file_reader.h  yk_input.h  yk_key_codes.h  yk_renderer.h  yk_renderer2d.h  yk_scene.h  yk_shader.h  yk_viewport.h  yk_window.h
include/yk/data_structures/: yk_vector.h  yk_yektor.h
include/yk/ecs/: yk_ecs.h
include/yk/math/: yk_math.h  yk_math_common.h  yk_math_transform.h  yk_math_types.h  yk_matrix.h  yk_vector.h
include/yk/physics/: yk_physics.h
include/yk/rendering/: yk_camera.h  yk_camera2d.h  yk_color.h  yk_renderer.h  yk_renderer2d.h  yk_shader.h  yk_texture.h
res/: default.vert
res/shaders/: default.frag  default.vert
res/shaders/cube/: default.frag
sandbox/: main.c  main2.c  main_docker.c  main_h.c  main_physics.c  main_render2d.c  rtmain.c  voxel.c  yektor_test.c
scripts/: dgen.bat  dgen_h.bat  docker.sh  gen.bat  gen.sh
scripts/internal/: dgen.bat  dgen_h.bat  docker.sh  docker_image.bat  gen.bat  gen_h.bat  innit.bat  innit.sh
src/: App.c  App.cpp  FileReader.c  FileReader.cpp  Renderer.c  Renderer.cpp  Window.c  Window.cpp  main.c  main.cpp  yk_app.c  yk_app.h  yk_app_h.c  yk_app_h.h  yk_camera.c  yk_camera2d.c  yk_core_types.h  yk_datatypes.h  yk_file_reader.c  yk_file_reader.h  yk_input.c  yk_renderer.c  yk_renderer.h  yk_renderer2d.c  yk_scene.c  yk_shader.c  yk_texture.c  yk_viewport.c  yk_window.c  yk_window.h
src/data_structures/: yk_yektor.c
src/ecs/: yk_ecs.c
src/math/: yk_math.c  yk_math.h  yk_math_common.c  yk_math_common.h  yk_math_transform.c  yk_math_transform.h  yk_math_types.h  yk_matrix.c  yk_matrix.h  yk_vector.c  yk_vector.h
src/physics/: yk_physics.c
src/rendering/: yk_camera.c  yk_camera2d.c  yk_color.c  yk_renderer.c  yk_renderer2d.c  yk_shader.c  yk_texture.c
yk-res/shaders/: default.frag
yk-res/shaders/cube/: default.vert
yk-res/shaders/default/: line.frag  line.vert  rect.frag  rect.vert  rt.comp
yk-res/shaders/instanced/: rect.vert
yk-res/shaders/rect/: default.frag  default.vert
